--- a/learning_log/learning_logs/templates/learning_logs/base.html
+++ b/learning_log/learning_logs/templates/learning_logs/base.html
@@ -1,4 +1,4 @@
-{% load bootstrap4 %}
+{% load django_bootstrap5 %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,7 +8,7 @@
     <title>Learning Log</title>
 
     {% bootstrap_css %}
-    {% bootstrap_javascript jquery='full' %}
+    {% bootstrap_javascript %}
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light mb-4 border">
